# hermes

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  mkdocs.yaml  plugin.yaml
.github/workflows/: cd.yml  ci.yml
0.1/: 404.html  index.html  sitemap.xml
0.1/compatibility/: index.html
0.1/quickstart/: index.html
0.1/search/: search_index.json
0.1/services/: index.html
0.1/services/slack/: index.html  manifest.yaml
dev/: 404.html  index.html  sitemap.xml
dev/compatibility/: index.html
dev/quickstart/: index.html
dev/search/: search_index.json
dev/services/: index.html
dev/services/slack/: index.html
docs/: Dockerfile  Makefile  ext.py  requirements.txt
docs/content/: compatibility.md  index.md  quickstart.md
docs/content/services/: index.md
docs/content/services/slack/: index.md
docs/overrides/: main.html
latest/compatibility/: index.html
latest/quickstart/: index.html
latest/services/: index.html
latest/services/slack/: index.html
manifests/: install.yaml  workflow.yaml
src/: cli.rs  k8s.rs  lib.rs  server.rs  templates.rs
src/services/: mod.rs  slack.rs
tests/: integration.rs
