[package]
name = "argo-hermes"
version = "0.1.0"
description = "Notifications plugin for your Argo workflows"
authors = ["Krzysztof Jagiello <me@kjagiello.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/kjagiello/hermes"
categories = ["web-programming::http-server"]
keywords = ["argo", "argo-workflows", "notifications", "slack"]
edition = "2021"

[[bin]]
name = "hermes"
path = "src/cli.rs"
doc = false

[profile.dev]
split-debuginfo = "unpacked"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
k8s-openapi = { version = "0.13.1", default-features = false, features = ["v1_22"] }
kube = { version = "0.65.0", features = ["client"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "~1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1.52"
lazy_static = "1.4.0"
handlebars = "4.1.6"
parking_lot = "0.11.2"
as-any = "0.2.1"
base64 = "0.13.0"
clap = "3.0.7"
